Fix alignment on navbar

--- a/src/app/components/Layout.scss
+++ b/src/app/components/Layout.scss
@@ -107,6 +107,8 @@
               overflow: hidden;
               left: 0;
               right: 0;
+              display: flex;
+              align-items: center;
 
               span {
                 padding-left: 20px;
